Fixes img button z-index issue

--- a/style.css
+++ b/style.css
@@ -436,7 +436,7 @@ h1{
       right: 180px;
       margin-right: 50px;
       margin-left: -200px;
-      z-index: -3;
+      z-index: -1;
   }
 
   .image1{
@@ -455,6 +455,7 @@ h1{
     height: 380px;
     width: 500px;
     border-radius: 20px;
+    z-index: 1;
   }
 
   footer h2{
